k8s/apps/lldap/lldap.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lldap
  namespace: default
  labels:
    app: lldap
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lldap
  template:
    metadata:
      labels:
        app: lldap
    spec:
      enableServiceLinks: false # Stoppe l'injection des variables LLDAP_SVC_*
      securityContext:
        fsGroup: 1000
      containers:
        - name: lldap
          image: lldap/lldap:latest
          command: ["/app/lldap"]
          args: ["run"]
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 1000
            runAsGroup: 1000
            capabilities:
              drop:
                - ALL
          ports:
            - containerPort: 3890
              name: ldap
            - containerPort: 17170
              name: http
          volumeMounts:
            - name: data
              mountPath: /data
            - name: tmp
              mountPath: /tmp
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              cpu: 500m
              memory: 250Mi
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: lldap-data-pvc
        - name: tmp
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: lldap-svc
  namespace: default
spec:
  selector:
    app: lldap
  ports:
    - name: http
      port: 17170
      targetPort: 17170
    - name: ldap
      port: 3890
      targetPort: 3890
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lldap-ingress
  namespace: default
spec:
  rules:
  - host: lldap.home.arpa
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: lldap-svc
            port:
              number: 17170
